--- a/html/introduction-to-html/navigation-menu-start/index.html
+++ b/html/introduction-to-html/navigation-menu-start/index.html
@@ -8,7 +8,12 @@
 
   <body>
     <!-- put navigation menu just below here -->
-
+    <ul>
+      <li>index</li>
+      <li>pictures</li>
+      <li>projects</li>
+      <li>social</li>
+    </ul>
     <h1>Homepage</h1>
 
     <p>Welcome to my exciting homepage</p>
